tpctk-fs-kube-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fs-frontend
  namespace: the-precast-toolkit-fs
spec:
  type: ClusterIP
  selector:
    app: fs-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
