tpctk-fs-kube-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fs-frontend-ingress
  namespace: the-precast-toolkit-fs
  annotations:
    cert-manager.io/cluster-issuer: 'staging-issuer-amd64'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fs.precasttoolkit.com
    secretName: tpctk-fs-frontend-tls-staging-v1
  rules:
  - host: fs.precasttoolkit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fs-frontend
            port:
              number: 80
